log/build_2025-05-22_15-23-54/car/stderr.log
  File "/home/rhobtor/PHD/ARGOJ8_IA/install/car/lib/python3.10/site-packages/car/joystick_control.py", line 35
    )
    ^
SyntaxError: unmatched ')'

